--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Emerging Technologies</h1>
     <main>
         <!-- sample of a blog post -->
-        <!--article>
+         <!--article>
             <h2>article title here</h2>
             <img src="" alt="article alt text here">
             <a href="">Article link here</a>
@@ -19,6 +19,15 @@
             <p>Summary of the article and the technology it talks about</p>
         </article-->
         <!-- end of sample -->
+        <article>
+            <h2> Observability With Google Cloud: A Strong Solution That’s Stronger With Proven Partners</h2>
+            <img src="https://cdn.ttgtmedia.com/microsites/natgooglecloud/images/Picturenew1.png">
+            <a href="">https://www.techtarget.com/searchcloudcomputing/CloudObservability/Observability-With-Google-Cloud-A-Strong-Solution-Thats-Stronger-With-Proven-Partners?utm_source=google&int=off&pre=off&utm_medium=cpc&utm_term=GAW&utm_content=sy_lp09152023GOOGOTHR_GsidsCloudComputing_Google_Embed_IO179300_LI2691712&utm_campaign=USOnly&Offer=sy_lp09152023GOOGOTHR_GsidsCloudComputing_Google_Embed_IO179300_LI2691712</a>
+            <time>oct 17,2023</time>
+            <p>Observability is increasingly important to modern IT operations because it enables proactive collection, aggregation, and correlation of information about applications running on cloud infrastructure. It is no longer sufficient for organizations to use dashboards to monitor system performance or to view operational performance solely through point tools such as application performance monitoring or log management.
+
+            </p>
+        </article>
     </main>
 </body>
 </html>
