Fifth article created

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <h2> Observability With Google Cloud: A Strong Solution That’s Stronger With Proven Partners</h2>
             <img src="https://cdn.ttgtmedia.com/microsites/natgooglecloud/images/Picturenew1.png"> 
             
-            <a href="https://www.techtarget.com/searchcloudcomputing/CloudObservability/Observability-With-Google-Cloud-A-Strong-Solution-Thats-Stronger-With-Proven-Partners?utm_source=google&int=off&pre=off&utm_medium=cpc&utm_term=GAW&utm_content=sy_lp09152023GOOGOTHR_GsidsCloudComputing_Google_Embed_IO179300_LI2691712&utm_campaign=USOnly&Offer=sy_lp09152023GOOGOTHR_GsidsCloudComputing_Google_Embed_IO179300_LI2691712> "></a>
+            <a href="https://www.techtarget.com/searchcloudcomputing/CloudObservability/Observability-With-Google-Cloud-A-Strong-Solution-Thats-Stronger-With-Proven-Partners?utm_source=google&int=off&pre=off&utm_medium=cpc&utm_term=GAW&utm_content=sy_lp09152023GOOGOTHR_GsidsCloudComputing_Google_Embed_IO179300_LI2691712&utm_campaign=USOnly&Offer=sy_lp09152023GOOGOTHR_GsidsCloudComputing_Google_Embed_IO179300_LI2691712> ">Observability With Google Cloud</a>
                 <time>oct 17,2023</time>
             <p>Observability is increasingly important to modern IT operations because it enables proactive collection, aggregation, and correlation of information about applications running on cloud infrastructure. It is no longer sufficient for organizations to use dashboards to monitor system performance or to view operational performance solely through point tools such as application performance monitoring or log management.
 
