FIFTH ARTICL CREATED

--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
             <p>The World Economic Forum's newly-launched 'Top 10 Emerging Technologies of 2023' report lists this year's most impactful emerging technologies.
                 The Top 10 list includes environmental innovations, such as sustainable aviation fuels and wearable plant sensors.
                 Other emerging technologies range from innovations harnessing the power of AI to reengineering molecular biology.
-                Technology is a relentless disruptor. It changes the context for how we live, work and play, redefines businesses and industries, and offers unprecedented solutions for addressing complex planetary and societal challenges.</p>
+                Technology is a relentless disruptor. It changes the context for how we live, work and play, redefines businesses and industries, and offers unprecedented solutions for addressing complex planetary and societal challenges.
+                </p>
         </article>
         
         
